[gd_scene load_steps=8 format=4 uid="uid://bpecbwxt3oiki"]

[ext_resource type="Script" path="res://rooms/roomScript.gd" id="1_i4yhj"]
[ext_resource type="TileSet" uid="uid://docej5wcqee5w" path="res://Assets/tileSet.tres" id="2_y4tjs"]
[ext_resource type="PackedScene" uid="uid://qsr5njjkufos" path="res://Objects/player.tscn" id="3_nvks3"]
[ext_resource type="PackedScene" uid="uid://bw8txyrgl20q6" path="res://Objects/startingPad.tscn" id="3_oy75g"]
[ext_resource type="PackedScene" uid="uid://bkud0vjhjypts" path="res://Objects/endingPad.tscn" id="4_eq2m1"]
[ext_resource type="PackedScene" uid="uid://ddyxelpg0sbwy" path="res://Objects/dot.tscn" id="6_2ihu6"]

[sub_resource type="LabelSettings" id="LabelSettings_5d12u"]
font_size = 100

[node name="TemplateRoom" type="Node2D"]
script = ExtResource("1_i4yhj")
roomNumber = 1

[node name="tiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAAAAAAFAAAAAAABAAEAAAAFAAEAAAACAAAAAAAEAAAAAAACAAEAAAAEAAEAAAADAAAAAAAFAAAAAAADAAEAAAAFAAEAAAAEAAAAAAAEAAAAAAAEAAEAAAAEAAEAAAAFAAAAAAAFAAAAAAAFAAEAAAAFAAEAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAEAAAAHAAAAAAAFAAAAAAAHAAEAAAAFAAEAAAAIAAAAAAAEAAAAAAAIAAEAAAAEAAEAAAAJAAAAAAAFAAAAAAAJAAEAAAAFAAEAAAAKAAAAAAAEAAAAAAAKAAEAAAAEAAEAAAALAAAAAAAFAAAAAAALAAEAAAAFAAEAAAAMAAAAAAAEAAAAAAAMAAEAAAAEAAEAAAANAAAAAAAFAAAAAAANAAEAAAAFAAEAAAAOAAAAAAAEAAAAAAAOAAEAAAAEAAEAAAAPAAAAAAAFAAAAAAAPAAEAAAAFAAEAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAEAAAABAAIAAAAFAAAAAAABAAMAAAAFAAEAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAEAAAABAAQAAAAFAAAAAAABAAUAAAAFAAEAAAAAAAYAAAAEAAAAAAAAAAcAAAAEAAEAAAABAAYAAAAFAAAAAAABAAcAAAAFAAEAAAAAAAgAAAAEAAAAAAAAAAkAAAAEAAEAAAABAAgAAAAFAAAAAAABAAkAAAAFAAEAAAAAAAoAAAAEAAAAAAAAAAsAAAAEAAEAAAABAAoAAAAFAAAAAAABAAsAAAAFAAEAAAAAAAwAAAAEAAAAAAABAAwAAAAFAAAAAAACAAIAAAAEAAAAAAACAAMAAAAEAAEAAAADAAIAAAAFAAAAAAADAAMAAAAFAAEAAAAEAAIAAAAEAAAAAAAEAAMAAAAEAAEAAAAFAAIAAAAFAAAAAAAFAAMAAAAFAAEAAAAGAAIAAAAEAAAAAAAGAAMAAAAEAAEAAAAHAAIAAAAFAAAAAAAHAAMAAAAFAAEAAAAIAAIAAAAEAAAAAAAIAAMAAAAEAAEAAAAJAAIAAAAFAAAAAAAJAAMAAAAFAAEAAAAKAAIAAAAEAAAAAAAKAAMAAAAEAAEAAAALAAIAAAAFAAAAAAALAAMAAAAFAAEAAAAMAAIAAAAEAAAAAAAMAAMAAAAEAAEAAAANAAIAAAAFAAAAAAANAAMAAAAFAAEAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAEAAAAPAAIAAAAFAAAAAAAPAAMAAAAFAAEAAAAOAAQAAAAEAAAAAAAOAAUAAAAEAAEAAAAPAAQAAAAFAAAAAAAPAAUAAAAFAAEAAAAMAAQAAAAEAAAAAAAMAAUAAAAEAAEAAAANAAQAAAAFAAAAAAANAAUAAAAFAAEAAAAKAAQAAAAEAAAAAAAKAAUAAAAEAAEAAAALAAQAAAAFAAAAAAALAAUAAAAFAAEAAAAIAAQAAAAEAAAAAAAIAAUAAAAEAAEAAAAJAAQAAAAFAAAAAAAJAAUAAAAFAAEAAAAGAAQAAAAEAAAAAAAGAAUAAAAEAAEAAAAHAAQAAAAFAAAAAAAHAAUAAAAFAAEAAAAEAAQAAAAEAAAAAAAEAAUAAAAEAAEAAAAFAAQAAAAFAAAAAAAFAAUAAAAFAAEAAAACAAQAAAAEAAAAAAACAAUAAAAEAAEAAAADAAQAAAAFAAAAAAADAAUAAAAFAAEAAAACAAYAAAAEAAAAAAACAAcAAAAEAAEAAAADAAYAAAAFAAAAAAADAAcAAAAFAAEAAAAEAAYAAAAEAAAAAAAEAAcAAAAEAAEAAAAFAAYAAAAFAAAAAAAFAAcAAAAFAAEAAAAGAAYAAAAEAAAAAAAGAAcAAAAEAAEAAAAHAAYAAAAFAAAAAAAHAAcAAAAFAAEAAAAIAAYAAAAEAAAAAAAIAAcAAAAEAAEAAAAJAAYAAAAFAAAAAAAJAAcAAAAFAAEAAAAKAAYAAAAEAAAAAAAKAAcAAAAEAAEAAAALAAYAAAAFAAAAAAALAAcAAAAFAAEAAAAMAAYAAAAEAAAAAAAMAAcAAAAEAAEAAAANAAYAAAAFAAAAAAANAAcAAAAFAAEAAAAOAAYAAAAEAAAAAAAOAAcAAAAEAAEAAAAPAAYAAAAFAAAAAAAPAAcAAAAFAAEAAAAOAAgAAAAEAAAAAAAOAAkAAAAEAAEAAAAPAAgAAAAFAAAAAAAPAAkAAAAFAAEAAAAMAAgAAAAEAAAAAAAMAAkAAAAEAAEAAAANAAgAAAAFAAAAAAANAAkAAAAFAAEAAAAKAAgAAAAEAAAAAAAKAAkAAAAEAAEAAAALAAgAAAAFAAAAAAALAAkAAAAFAAEAAAAIAAgAAAAEAAAAAAAIAAkAAAAEAAEAAAAJAAgAAAAFAAAAAAAJAAkAAAAFAAEAAAAGAAgAAAAEAAAAAAAGAAkAAAAEAAEAAAAHAAgAAAAFAAAAAAAHAAkAAAAFAAEAAAAEAAgAAAAEAAAAAAAEAAkAAAAEAAEAAAAFAAgAAAAFAAAAAAAFAAkAAAAFAAEAAAACAAgAAAAEAAAAAAACAAkAAAAEAAEAAAADAAgAAAAFAAAAAAADAAkAAAAFAAEAAAACAAoAAAAEAAAAAAACAAsAAAAEAAEAAAADAAoAAAAFAAAAAAADAAsAAAAFAAEAAAAEAAoAAAAEAAAAAAAEAAsAAAAEAAEAAAAFAAoAAAAFAAAAAAAFAAsAAAAFAAEAAAAGAAoAAAAEAAAAAAAGAAsAAAAEAAEAAAAHAAoAAAAFAAAAAAAHAAsAAAAFAAEAAAAIAAoAAAAEAAAAAAAIAAsAAAAEAAEAAAAJAAoAAAAFAAAAAAAJAAsAAAAFAAEAAAAKAAoAAAAEAAAAAAAKAAsAAAAEAAEAAAALAAoAAAAFAAAAAAALAAsAAAAFAAEAAAAMAAoAAAAEAAAAAAAMAAsAAAAEAAEAAAANAAoAAAAFAAAAAAANAAsAAAAFAAEAAAAOAAoAAAAEAAAAAAAOAAsAAAAEAAEAAAAPAAoAAAAFAAAAAAAPAAsAAAAFAAEAAAACAAwAAAAEAAAAAAADAAwAAAAFAAAAAAAEAAwAAAAEAAAAAAAFAAwAAAAFAAAAAAAGAAwAAAAEAAAAAAAHAAwAAAAFAAAAAAAIAAwAAAAEAAAAAAAJAAwAAAAFAAAAAAAKAAwAAAAEAAAAAAALAAwAAAAFAAAAAAAMAAwAAAAEAAAAAAANAAwAAAAFAAAAAAAOAAwAAAAEAAAAAAAPAAwAAAAFAAAAAAD+/wAAAAACAAEAAAD//wAAAAADAAEAAAD+/wEAAAACAAEAAAD//wEAAAADAAEAAAD+/wIAAAACAAEAAAD//wIAAAADAAEAAAD+/wMAAAACAAEAAAD//wMAAAADAAEAAAD+/wQAAAACAAEAAAD//wQAAAADAAEAAAD+/wUAAAACAAEAAAD//wUAAAADAAEAAAD+/wYAAAACAAEAAAD//wYAAAADAAEAAAD+/wcAAAACAAEAAAD//wcAAAADAAEAAAD+/wgAAAACAAEAAAD//wgAAAADAAEAAAD+/wkAAAACAAEAAAD//wkAAAADAAEAAAD+/woAAAACAAEAAAD//woAAAADAAEAAAD+/wsAAAACAAEAAAD//wsAAAADAAEAAAD+/wwAAAACAAEAAAD//wwAAAADAAEAAAAQAAAAAAABAAEAAAARAAAAAAACAAEAAAAQAAEAAAABAAEAAAARAAEAAAACAAEAAAAQAAIAAAABAAEAAAARAAIAAAACAAEAAAAQAAMAAAABAAEAAAARAAMAAAACAAEAAAAQAAQAAAABAAEAAAARAAQAAAACAAEAAAAQAAUAAAABAAEAAAARAAUAAAACAAEAAAAQAAYAAAABAAEAAAARAAYAAAACAAEAAAAQAAcAAAABAAEAAAARAAcAAAACAAEAAAAQAAgAAAABAAEAAAARAAgAAAACAAEAAAAQAAkAAAABAAEAAAARAAkAAAACAAEAAAAQAAoAAAABAAEAAAARAAoAAAACAAEAAAAQAAsAAAABAAEAAAARAAsAAAACAAEAAAAQAAwAAAABAAEAAAARAAwAAAACAAEAAAAAAA0AAAACAAAAAAAAAA4AAAACAAEAAAABAA0AAAACAAAAAAABAA4AAAACAAEAAAACAA0AAAACAAAAAAACAA4AAAACAAEAAAADAA0AAAACAAAAAAADAA4AAAACAAEAAAAEAA0AAAACAAAAAAAEAA4AAAACAAEAAAAFAA0AAAACAAAAAAAFAA4AAAACAAEAAAAGAA0AAAACAAAAAAAGAA4AAAACAAEAAAAHAA0AAAACAAAAAAAHAA4AAAACAAEAAAAIAA0AAAACAAAAAAAIAA4AAAACAAEAAAAJAA0AAAACAAAAAAAJAA4AAAACAAEAAAAKAA0AAAACAAAAAAAKAA4AAAACAAEAAAALAA0AAAACAAAAAAALAA4AAAACAAEAAAAMAA0AAAACAAAAAAAMAA4AAAACAAEAAAANAA0AAAACAAAAAAANAA4AAAACAAEAAAAOAA0AAAACAAAAAAAOAA4AAAACAAEAAAAPAA0AAAACAAAAAAAPAA4AAAACAAEAAAAAAP7/AAACAAEAAAAAAP//AAACAAIAAAABAP7/AAACAAEAAAABAP//AAACAAIAAAACAP7/AAACAAEAAAACAP//AAACAAIAAAADAP7/AAACAAEAAAADAP//AAACAAIAAAAEAP7/AAACAAEAAAAEAP//AAACAAIAAAAFAP7/AAACAAEAAAAFAP//AAACAAIAAAAGAP7/AAACAAEAAAAGAP//AAACAAIAAAAHAP7/AAACAAEAAAAHAP//AAACAAIAAAAIAP7/AAACAAEAAAAIAP//AAACAAIAAAAJAP7/AAACAAEAAAAJAP//AAACAAIAAAAKAP7/AAACAAEAAAAKAP//AAACAAIAAAALAP7/AAACAAEAAAALAP//AAACAAIAAAAMAP7/AAACAAEAAAAMAP//AAACAAIAAAANAP7/AAACAAEAAAANAP//AAACAAIAAAAOAP7/AAACAAEAAAAOAP//AAACAAIAAAAPAP7/AAACAAEAAAAPAP//AAACAAIAAAD/////AAAAAAIAAAD//w0AAAAAAAEAAAAQAA0AAAAAAAAAAAAQAP//AAAFAAIAAAAQAP7/AAACAAEAAAARAP7/AAACAAEAAAARAP//AAACAAEAAAD///7/AAACAAEAAAD+//7/AAACAAEAAAD+////AAACAAEAAAD+/w0AAAACAAEAAAD+/w4AAAACAAEAAAD//w4AAAACAAEAAAAQAA4AAAACAAEAAAARAA4AAAACAAEAAAARAA0AAAACAAEAAAD9//7/AAACAAEAAAD9////AAACAAEAAAD9/wAAAAACAAEAAAD9/wEAAAACAAEAAAD9/wIAAAACAAEAAAD9/wMAAAACAAEAAAD9/wQAAAACAAEAAAD9/wUAAAACAAEAAAD9/wYAAAACAAEAAAD9/wcAAAACAAEAAAD8/wcAAAACAAEAAAD8/wgAAAACAAEAAAD8/wkAAAACAAEAAAD8/woAAAACAAEAAAD8/wsAAAACAAEAAAD8/wwAAAACAAEAAAD8/w0AAAACAAEAAAD7/w4AAAACAAEAAAD7/w0AAAACAAEAAAD7/wwAAAACAAEAAAD7/wsAAAACAAEAAAD7/woAAAACAAEAAAD7/wkAAAACAAEAAAD6/wkAAAACAAEAAAD6/wgAAAACAAEAAAD6/wcAAAACAAEAAAD6/wYAAAACAAEAAAD6/wUAAAACAAEAAAD6/wQAAAACAAEAAAD6/wMAAAACAAEAAAD6/wIAAAACAAEAAAD6/wEAAAACAAEAAAD6/wAAAAACAAEAAAD6////AAACAAEAAAD6//7/AAACAAEAAAD6/woAAAACAAEAAAD6/wsAAAACAAEAAAD6/wwAAAACAAEAAAD6/w0AAAACAAEAAAD6/w4AAAACAAEAAAD7/wcAAAACAAEAAAD7/wgAAAACAAEAAAD8/w4AAAACAAEAAAD9/w4AAAACAAEAAAD9/w0AAAACAAEAAAD9/wwAAAACAAEAAAD9/wsAAAACAAEAAAD9/woAAAACAAEAAAD9/wkAAAACAAEAAAD9/wgAAAACAAEAAAD8/wEAAAACAAEAAAD8/wIAAAACAAEAAAD8/wMAAAACAAEAAAD8/wQAAAACAAEAAAD8/wUAAAACAAEAAAD8/wYAAAACAAEAAAD7/wYAAAACAAEAAAD7/wUAAAACAAEAAAD7/wQAAAACAAEAAAD7/wMAAAACAAEAAAD7/wIAAAACAAEAAAD7/wEAAAACAAEAAAD7/wAAAAACAAEAAAD7////AAACAAEAAAD7//7/AAACAAEAAAD8////AAACAAEAAAD8/wAAAAACAAEAAAD8//7/AAACAAEAAAASAP7/AAACAAEAAAASAP//AAACAAEAAAASAAAAAAACAAEAAAASAAEAAAACAAEAAAASAAIAAAACAAEAAAASAAMAAAACAAEAAAASAAQAAAACAAEAAAASAAUAAAACAAEAAAASAAYAAAACAAEAAAASAAcAAAACAAEAAAASAAgAAAACAAEAAAASAAkAAAACAAEAAAASAAoAAAACAAEAAAASAAsAAAACAAEAAAASAAwAAAACAAEAAAASAA0AAAACAAEAAAASAA4AAAACAAEAAAATAP7/AAACAAEAAAATAP//AAACAAEAAAATAAAAAAACAAEAAAATAAEAAAACAAEAAAATAAIAAAACAAEAAAATAAMAAAACAAEAAAATAAQAAAACAAEAAAATAAUAAAACAAEAAAATAAYAAAACAAEAAAATAAcAAAACAAEAAAATAAgAAAACAAEAAAATAAkAAAACAAEAAAATAAoAAAACAAEAAAATAAsAAAACAAEAAAATAAwAAAACAAEAAAATAA0AAAACAAEAAAATAA4AAAACAAEAAAAUAP7/AAACAAEAAAAUAP//AAACAAEAAAAUAAAAAAACAAEAAAAUAAEAAAACAAEAAAAUAAIAAAACAAEAAAAUAAMAAAACAAEAAAAUAAQAAAACAAEAAAAUAAUAAAACAAEAAAAUAAYAAAACAAEAAAAUAAcAAAACAAEAAAAUAAgAAAACAAEAAAAUAAkAAAACAAEAAAAUAAoAAAACAAEAAAAUAAsAAAACAAEAAAAUAAwAAAACAAEAAAAUAA0AAAACAAEAAAAUAA4AAAACAAEAAAAVAP7/AAACAAEAAAAVAP//AAACAAEAAAAVAAAAAAACAAEAAAAVAAEAAAACAAEAAAAVAAIAAAACAAEAAAAVAAMAAAACAAEAAAAVAAQAAAACAAEAAAAVAAUAAAACAAEAAAAVAAYAAAACAAEAAAAVAAcAAAACAAEAAAAVAAgAAAACAAEAAAAVAAkAAAACAAEAAAAVAAoAAAACAAEAAAAVAAsAAAACAAEAAAAVAAwAAAACAAEAAAAVAA0AAAACAAEAAAAVAA4AAAACAAEAAAAWAP7/AAACAAEAAAAWAP//AAACAAEAAAAWAAAAAAACAAEAAAAWAAEAAAACAAEAAAAWAAIAAAACAAEAAAAWAAMAAAACAAEAAAAWAAQAAAACAAEAAAAWAAUAAAACAAEAAAAWAAYAAAACAAEAAAAWAAcAAAACAAEAAAAWAAgAAAACAAEAAAAWAAkAAAACAAEAAAAWAAoAAAACAAEAAAAWAAsAAAACAAEAAAAWAAwAAAACAAEAAAAWAA0AAAACAAEAAAAWAA4AAAACAAEAAAA=")
tile_set = ExtResource("2_y4tjs")

[node name="StartingPad" parent="." instance=ExtResource("3_oy75g")]
position = Vector2(490, 74)

[node name="dot" parent="StartingPad" instance=ExtResource("6_2ihu6")]

[node name="EndingPad" parent="." instance=ExtResource("4_eq2m1")]
position = Vector2(506, 720)

[node name="dots" type="Node2D" parent="."]

[node name="coins" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(566, 424)
scale = Vector2(0.989648, 1)
zoom = Vector2(0.63, 0.63)

[node name="Player" parent="." instance=ExtResource("3_nvks3")]
position = Vector2(320, 225)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = -2.0
offset_right = 44.0
offset_bottom = 38.0

[node name="ColorRect" type="ColorRect" parent="GUI"]
layout_mode = 0
offset_left = -351.0
offset_top = 40.0
offset_right = -311.0
offset_bottom = 80.0
scale = Vector2(45.6554, -3.1989)
color = Color(0, 0, 0, 1)

[node name="COINS" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 697.0
offset_top = -89.0
offset_right = 1297.0
offset_bottom = 179.0
text = "COINS:"
label_settings = SubResource("LabelSettings_5d12u")
horizontal_alignment = 1

[node name="displayed_coins" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 1003.0
offset_top = -89.0
offset_right = 1603.0
offset_bottom = 179.0
text = "9/9"
label_settings = SubResource("LabelSettings_5d12u")
horizontal_alignment = 1

[node name="displayed_level" type="Label" parent="GUI"]
layout_mode = 0
offset_left = -268.0
offset_top = -87.0
offset_right = 332.0
offset_bottom = 181.0
text = "1"
label_settings = SubResource("LabelSettings_5d12u")
horizontal_alignment = 1

[node name="LEVEL" type="Label" parent="GUI"]
layout_mode = 0
offset_left = -458.0
offset_top = -89.0
offset_right = 142.0
offset_bottom = 179.0
text = "Level:"
label_settings = SubResource("LabelSettings_5d12u")
horizontal_alignment = 1
